tests/typechecking/valid/array_get_put.ml
let a = Array.create 3 5. in
let b = a.(0) +. a.(1) in
let t = a.(2) <- 3. in
()
