tests/typechecking/invalid/array_put_wrong_type_3.ml
let x = 1 in
let y = 2. in
let a = Array.create 3 1. in
let t = a.(x) <- y in
let z = 1. *. t in
()
